--- a/manifest.json
+++ b/manifest.json
@@ -1,22 +1,37 @@
 {
-    "name": "User Management System",
-    "short_name": "UMS",
-    "start_url": "/",
+    "name": "School Invincible",
+    "short_name": "SI",
+    "start_url": "/index.html",
     "display": "standalone",
-    "background_color": "#ffffff",
-    "theme_color": "#007bff",
+    "background_color": "#000000",
+    "theme_color": "#00ff00",
+    "orientation": "portrait",
     "icons": [
       {
-        "src": "/icons/icon-192.png",
+        "src": "icons/icon.svg",
         "sizes": "192x192",
-        "type": "image/png",
+        "type": "image/svg+xml",
         "purpose": "any maskable"
       },
       {
-        "src": "/icons/icon-512.png",
+        "src": "icons/icon.svg",
         "sizes": "512x512",
-        "type": "image/png",
+        "type": "image/svg+xml",
         "purpose": "any maskable"
       }
+    ],
+    "shortcuts": [
+      {
+        "name": "Login",
+        "short_name": "Login",
+        "description": "Login to your account",
+        "url": "/index.html"
+      },
+      {
+        "name": "Register",
+        "short_name": "Register",
+        "description": "Create a new account",
+        "url": "/index.html#register"
+      }
     ]
-  }
+}
